# mobile-manipulator-compliance

./: .gitignore  .gitmodules  README.md  export  export_dinova1  export_dinova2  requirements.txt  tox.ini
controllers/: setup.py
controllers/controllers/: calibration.py  controllers.py  state.py
cpp/: CMakeLists.txt  build  python_wrapper.cpp
cpp/dingo_driver/: dingo_driver.cpp  dingo_driver.h
cpp/puma_motor_driver/: README.md  driver.cpp  driver.h  socketcan_gateway.h
cpp/puma_motor_msg/: Status.h
dingo_hardware/: dingo_driver.cpp  dingo_driver.h
dingo_hardware/dingo_base/: README.md  dingo_hardware.cpp  dingo_hardware.h
dingo_hardware/puma_motor_driver/: gateway.h  socketcan_gateway.cpp  socketcan_gateway.h
dingo_hardware/puma_motor_msg/: README.md
dingo_hardware/socketcan_interface/: README.md  logging.h  socketcan.h
docker/: .bashrc  Dockerfile  Dockerfile.core  attach  build  build_core  build_docker  kortex_api-2.6.0.post3-py3-none-any.whl  requirements.txt  requirements_core.txt  requirements_flake8.txt  requirements_full.txt  requirements_gui.txt  run  start_core  start_docker
docs/: application_on_robot.md  installation.md
kinova/: setup.py
kinova/kinova/: kortex_client.py  kortex_client_simulation.py  mujoco_viewer.py  specifications.py
kinova/kinova/messages/: ActuatorConfig.py  Base.py
kinova_compliant_control/: client.py  main.py  server.py
kinova_compliant_control/compliant_controller/: calibration.py  controller.py  state.py
kinova_compliant_control/kinova/: kortex_client.py  kortex_client_simulation.py  specifications.py
kinova_compliant_control/kinova/models/: GEN3-LITE.xml  GEN3-LITE_original.urdf
kinova_compliant_control/user_interface/: launcher.py  layout.py  logger.py  mujoco_viewer.py
launch/: interface.py  robot.py  simulation.py
python/: setup.py
python/compliant_control/control/: calibration.py  controller.py  state.py
python/compliant_control/controllers/: calibration.py  controllers.py  state.py
python/compliant_control/dingo/: dingo_driver.py  dingo_driver_simulation.py  utilities.py
python/compliant_control/interface/: callbacks.py  data_classes.py  joystick.py  templates.py  user_interface.py  window_commands.py
python/compliant_control/kinova/: kortex_client.py  kortex_client_mock.py  kortex_client_simulation.py  mujoco_viewer.py  specifications.py  utilities.py
python/compliant_control/mujoco/: simulation.py  target_mover.py  viewer.py  visualization.py
python/compliant_control/simulation/: simulation.py
python/compliant_control/utilities/: rate_counter.py
recordings/: plotter.py
recordings/2023-12-14/: compliant.csv  kinova.csv  no_null.csv  no_null_no_fric.csv
recordings/2023-12-22/: calibrate_friction.csv  calibrate_joint1_only.csv  calibrate_model.csv  calibrate_torque_and_friction.csv
recordings/2024-01-05/1/: compliant.csv
recordings/2024-01-05/4/: compliant.csv  (+1 more)
ros/: build
ros/noetic/src/control_interface/: CMakeLists.txt  package.xml
ros/noetic/src/control_interface/control_interface/: control_interface_node.py
ros/noetic/src/user_interface_msg/: CMakeLists.txt  package.xml
ros/noetic/src/user_interface_msg/msg/: Record.msg  Ufdbk.msg  Ustate.msg  Utarget.msg
ros2_ws/src/dingo_driver/: CMakeLists.txt  package.xml
ros2_ws/src/dingo_driver/src/: dingo_driver_node.cpp
user_interface/: setup.py
user_interface/user_interface/: dingo_controller.py  dingo_pid_tuner.py  kinova_controller.py
(+160 files in other folders)
