cmake_minimum_required(VERSION 3.4)
set(CMAKE_CXX_STANDARD 17)
project(build_dingo_python_driver)
add_subdirectory(pybind11)
find_package(Boost COMPONENTS thread REQUIRED)
pybind11_add_module(dingo_driver python_wrapper.cpp dingo_driver/dingo_driver.cpp puma_motor_driver/socketcan_gateway.cpp puma_motor_driver/driver.cpp)
target_link_libraries(dingo_driver PRIVATE Boost::thread)
include_directories(dingo_driver PRIVATE ${PROJECT_SOURCE_DIR})
set_target_properties(dingo_driver PROPERTIES SUFFIX ".so")
install(TARGETS dingo_driver DESTINATION ${PROJECT_SOURCE_DIR}/../python/compliant_control/dingo/lib)