<?xml version="1.0"?>
<package format="2">
  <name>user_interface_msg</name>
  <version>0.0.0</version>
  <description>The user_interface_msg package</description>
  <maintainer email="jsdewolde@gmail.com">dingo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
